# hailort

./: CMakeLists.txt  README.md
hailort/: .gitignore  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY.md  hailo_firmware_eula  prepare_externals.cmake
hailort/cmake/: common_compiler_options.cmake  execute_cmake.cmake
hailort/common/: CMakeLists.txt  async_thread.hpp  barrier.cpp  barrier.hpp  buffer_pool.cpp  buffer_pool.hpp  circular_buffer.hpp  compiler_extensions_compat.hpp  device_measurements.cpp  device_measurements.hpp  env_vars.hpp  ethernet_utils.hpp  event_internal.cpp  event_internal.hpp  file_descriptor.hpp  file_utils.cpp  file_utils.hpp  filesystem.hpp  fork_support.cpp  fork_support.hpp  internal_env_vars.hpp  latency_meter.hpp  logger_macros.hpp  mmap_buffer.hpp  object_pool.hpp  os_utils.hpp  process.hpp  runtime_statistics_internal.hpp  shared_memory_buffer.hpp  socket.hpp  string_utils.cpp  string_utils.hpp  thread_pool.hpp  thread_safe_queue.hpp  utils.cpp  utils.hpp
hailort/common/genai/: connection_ports.hpp  constants.hpp  eigen.hpp
hailort/common/genai/serializer/: CMakeLists.txt  genai_rpc.hpp  genai_scheme.proto  serializer.cpp  serializer.hpp
hailort/common/genai/session_wrapper/: session_wrapper.cpp  session_wrapper.hpp
hailort/common/genai/tokenizer/: CMakeLists.txt  embedding_view_wrapper.hpp  hailo_tokenizer.cpp  hailo_tokenizer.hpp  token_embedder.hpp
hailort/common/os/posix/: CMakeLists.txt  ethernet_utils.cpp  file_descriptor.cpp  filesystem.cpp  mmap_buffer.cpp  os_utils.cpp  (+5 more)
hailort/drivers/common/: hailo_ioctl_common.h
hailort/hailort_server/: CMakeLists.txt  cng_buffer_pool.cpp  cng_buffer_pool.hpp  hailort_server.cpp  hailort_server.hpp  hailort_server.service  hailort_server.sh  server_main.cpp
hailort/hailort_server/genai/: CMakeLists.txt  decoder_inference_manager.cpp  decoder_inference_manager.hpp  eigen.hpp  genai_server.cpp  genai_server.hpp  hailo_tokenizer.hpp  inference_manager.cpp  inference_manager.hpp  librosa.h  token_embedder.hpp  utils.hpp
hailort/hailort_service/: CMakeLists.txt  cng_buffer_pool.cpp  cng_buffer_pool.hpp  hailort.service  hailort_rpc_service.cpp  hailort_rpc_service.hpp  hailort_service  hailort_service.cpp  service_resource_manager.hpp  service_resource_queue.hpp  vdevice_callbacks_queue.hpp
hailort/hailort_service/unix/: hailort_service.cpp
hailort/hailort_service/windows/: hailort_service.cpp  hailort_service_env_vars.bat
hailort/hailortcli/: CMakeLists.txt  benchmark_command.cpp  benchmark_command.hpp  board_config_command.cpp  board_config_command.hpp  buffer_utils.hpp  command.cpp  command.hpp  common.cpp  common.hpp  download_action_list_command.cpp  download_action_list_command.hpp  fw_config_command.cpp  fw_config_command.hpp  fw_config_serializer.cpp  fw_config_serializer.hpp  fw_control_command.cpp  fw_control_command.hpp  fw_logger_command.cpp  fw_logger_command.hpp  fw_update_command.cpp  fw_update_command.hpp  generate_definitions_json_str.in  graph_printer.cpp  graph_printer.hpp  hailortcli.cpp  hailortcli.hpp  infer_stats_printer.cpp  infer_stats_printer.hpp  inference_progress.cpp  inference_progress.hpp  inference_result.hpp  logs_command.cpp  logs_command.hpp  measure_nnc_performance_command.cpp  measure_nnc_performance_command.hpp  memory_requirements_command.cpp  memory_requirements_command.hpp  mon_command.cpp  mon_command.hpp  (+16 more)
hailort/hailortcli/run2/: io_wrappers.cpp  io_wrappers.hpp  live_printer.cpp  live_printer.hpp  live_stats.cpp  live_stats.hpp  measurement_live_track.cpp  measurement_live_track.hpp  network_live_track.cpp  network_live_track.hpp  network_runner.cpp  network_runner.hpp  run2_command.cpp  run2_command.hpp  timer_live_track.cpp  timer_live_track.hpp
hailort/hrpc/: CMakeLists.txt  client.cpp  client.hpp  connection_context.cpp  connection_context.hpp  hailo_session.cpp  raw_connection.cpp  raw_connection.hpp  response_writer.hpp  rpc_connection.cpp  rpc_connection.hpp  server.cpp  server.hpp  server_resource_manager.hpp
hailort/hrpc_protocol/: CMakeLists.txt  rpc.proto  serializer.cpp  serializer.hpp
hailort/libhailort/: CMakeLists.txt  hef.proto  scheduler_mon.proto  tracer_profiler.proto
hailort/libhailort/bindings/: CMakeLists.txt
hailort/libhailort/cmake/: common_compiler_options.cmake
hailort/libhailort/doc/: CMakeLists.txt  Doxyfile.in
hailort/libhailort/examples/: CMakeLists.txt  README.md
hailort/libhailort/src/: CMakeLists.txt  Config.cmake.in  buffer.cpp  channel_allocator.cpp  channel_allocator.hpp  config_buffer.cpp  config_buffer.hpp  control.cpp  control.hpp  control_protocol.cpp  control_protocol.hpp  core_device.cpp  core_device.hpp  core_stream.cpp  core_stream.hpp  d2h_event_queue.hpp  d2h_events_parser.cpp  ddr_channels_pair.cpp  ddr_channels_pair.hpp  device.cpp  device_internal.cpp  device_internal.hpp  eth_device.cpp  eth_device.hpp  eth_stream.cpp  eth_stream.hpp  event_internal.hpp  hailort.cpp  hailort_common.cpp  hailort_defaults.cpp  hailort_defaults.hpp  hailort_logger.cpp  hailort_logger.hpp  hailort_rpc_client.cpp  hailort_rpc_client.hpp  hef.cpp  hef_internal.hpp  hlpcie.cpp  hlpcie.hpp  hw_consts.hpp  (+68 more)
hailort/pre_build/: CMakeLists.txt
hailort/pre_build/tools/: CMakeLists.txt
hailort/prepare_externals/: CMakeLists.txt
hailort/rpc/: CMakeLists.txt  hailort_rpc.proto  rpc_definitions.hpp
hailort/scripts/: configure_interface.sh  download_firmware_eth.cmd  download_firmware_eth.sh  download_hefs.cmd  download_hefs.sh  usb_setup.sh
hailort/tools/hailo15-scripts/: hailo15_env_vars.sh  load_driver.sh  load_firmware.sh  load_hrt.sh  load_pcr.sh  read_log.sh  sanity_infer.sh  update_hrt_and_infer.sh
hailort/tools/hw_debug/: CMakeLists.txt  driver_memory.cpp  driver_memory.hpp  hailo15_fields.cpp  hailo15_fields.hpp  main.cpp  memory_commands.cpp  memory_commands.hpp  mercury_fields.cpp  mercury_fields.hpp  readline_wrapper.cpp  readline_wrapper.hpp  shell.cpp  shell.hpp
hailort/tools/qnx-scripts/: load_driver.sh  load_firmware.sh  load_hrt.sh  qnx_env_vars.sh
hailort/tools/shef/: shef.py
(+824 files in other folders)
